--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <!-- PageFlip -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/page-flip/dist/css/page-flip.min.css">
   <script src="https://cdn.jsdelivr.net/npm/page-flip/dist/js/page-flip.browser.min.js"></script>
+  <!-- Panzoom -->
+  <script src="https://cdn.jsdelivr.net/npm/@panzoom/panzoom@4.6.0/dist/panzoom.min.js"></script>
   <style>
     :root{
       --bg:#0b0c10; --panel:#151821; --text:#e9eef6; --muted:#9aa3b2; --accent:#46b3ff; --paper-dark:#0e1117;
@@ -22,7 +24,11 @@
     .hint{color:var(--muted);font-size:13px}
 
     /* 뷰포트/줌 레이어 */
-    #viewer{position:relative;display:grid;place-items:center;overflow:hidden;background:transparent;touch-action:none;}
+    #viewer{
+      position:relative;display:grid;place-items:center;overflow:hidden;background:transparent;
+      /* Panzoom이 제스처를 전담하도록 */
+      touch-action:none;
+    }
     #zoomLayer{
       position:relative;width:fit-content;height:fit-content;
       transform-origin:0 0; cursor:grab; user-select:none; background:var(--paper-dark);
@@ -116,27 +122,24 @@
   const fsBtn = document.getElementById('fs');
   const statusEl = document.getElementById('status');
 
+  // 상태
   let pageFlip = null;
   let currentPages = [];
-  let gestureHadPinch = false;
 
-  // 원본 단면 크기 — 첫 이미지로 자동 감지
-  let PAGE_W = 1240, PAGE_H = 1624;
+  // Panzoom
+  let pz = null;
+  const MIN_SCALE = 0.25, MAX_SCALE = 4.0;
+
+  // 페이지/레이아웃
+  let PAGE_W = 1240, PAGE_H = 1624; // 첫 이미지로 자동 감지
   let BOOK_W = PAGE_W * 2;
-
-  // 반응형 모드
   const MOBILE_BREAKPOINT = 900;
-  let isSinglePageMode = false;     // true=단면(모바일), false=스프레드(PC)
+  let isSinglePageMode = false;     // true=단면, false=스프레드
   let CONTENT_W = BOOK_W;
 
-  // 줌/패닝
-  const MIN_SCALE = 0.25, MAX_SCALE = 4.0;
-  let scale = 1, tx = 0, ty = 0;
-
-  // 탭/엣지 존 (탭만 페이지 넘김)
-  let EDGE_TAP_ZONE = 0.22;       // 좌/우 22%만 페이지 넘김
-  const TAP_MAX_DIST = 8;         // px
-  const TAP_MAX_MS = 300;         // ms
+  // 엣지 탭 내비
+  const EDGE_TAP_ZONE = 0.22, TAP_MAX_DIST = 8, TAP_MAX_MS = 300;
+  let tapStart = null;
 
   function setStatus(msg){ statusEl.textContent = msg; }
   function naturalSort(a,b){ const c = new Intl.Collator(undefined,{numeric:true,sensitivity:'base'}); return c.compare(a,b); }
@@ -154,13 +157,59 @@
     root.style.setProperty('--content-w', CONTENT_W + 'px');
   }
 
-  function getImageSize(url){
-    return new Promise((resolve, reject)=>{
-      const img = new Image();
-      img.onload = ()=>resolve({ w: img.naturalWidth, h: img.naturalHeight });
-      img.onerror = reject;
-      img.src = url;
-    });
+  // Panzoom 세팅
+  function computeFit() {
+    const vw = viewer.clientWidth, vh = viewer.clientHeight;
+    const fit = Math.min(vw / CONTENT_W, vh / PAGE_H);
+    const startScale = Math.max(MIN_SCALE, Math.min(1, fit));
+    const startX = Math.round((vw - CONTENT_W * startScale) / 2);
+    const startY = Math.round((vh - PAGE_H     * startScale) / 2);
+    return { startScale, startX, startY };
+  }
+
+  function setupPanzoom(recreate=false){
+    const { startScale, startX, startY } = computeFit();
+
+    if (recreate && pz){
+      pz.destroy();
+      pz = null;
+    }
+
+    if (!pz){
+      pz = Panzoom(zoomLayer, {
+        startScale, startX, startY,
+        minScale: MIN_SCALE, maxScale: MAX_SCALE,
+        canvas: true,                 // 부모 기준 드래그 허용
+        contain: 'outside',           // 바깥 여백 허용(더 자연스러운 패닝)
+        panOnlyWhenZoomed: true,      // 100% 이하는 패닝 금지(오동작 방지)
+        touchAction: 'none',
+        cursor: 'grab'
+      });
+
+      // 휠/트랙패드 줌
+      viewer.addEventListener('wheel', (e)=>{
+        e.preventDefault();
+        pz.zoomWithWheel(e);
+      }, { passive:false });
+
+      // 배율 표시 동기화
+      viewer.addEventListener('panzoomchange', ()=>{
+        const s = pz.getScale();
+        zoomRange.value = Math.round(s * 100);
+        zoomLbl.textContent = `${Math.round(s * 100)}%`;
+      });
+
+      // 슬라이더 → 중앙 기준 줌
+      zoomRange.addEventListener('input', ()=>{
+        const target = parseInt(zoomRange.value,10)/100;
+        const r = viewer.getBoundingClientRect();
+        pz.zoomToPoint(target, { clientX: r.left + r.width/2, clientY: r.top + r.height/2 }, { animate:false });
+      });
+    } else {
+      // 옵션 갱신 & 리셋
+      pz.setOptions({ minScale:MIN_SCALE, maxScale:MAX_SCALE });
+      pz.reset({ startX, startY, startScale, animate:false });
+    }
   }
 
   // PageFlip 초기화 (모드 기반)
@@ -173,11 +222,11 @@
       size: "fixed",
       minWidth: PAGE_W, maxWidth: PAGE_W,
       minHeight: PAGE_H, maxHeight: PAGE_H,
-      usePortrait: portrait,              // 단면/스프레드
-      showCover: portrait ? false : true, // 단면에선 cover 비활성화(Prev 문제 방지)
+      usePortrait: portrait,
+      showCover: portrait ? false : true, // 단면이면 Cover 비활성화(Prev 이슈 방지)
       maxShadowOpacity: .2,
-      mobileScrollSupport: false,         // 우리 포인터 핸들러만 사용
-      disableFlipByClick: true            // 내부 클릭/스와이프 비활성화
+      mobileScrollSupport: false,        // 제스처는 Panzoom만
+      disableFlipByClick: true
     });
     pageFlip.loadFromImages(imageURLs);
     totalEl.textContent = `/ ${imageURLs.length}`;
@@ -185,7 +234,7 @@
     pageFlip.on('flip', e => { pageInput.value = e.data + 1; });
   }
 
-  // Prev/Next를 안전하게 실행(커버/단면 엣지 케이스 방어)
+  // Prev/Next(안전 래퍼)
   function goPrev(){
     if(!pageFlip) return;
     const i = pageFlip.getCurrentPageIndex();
@@ -219,296 +268,25 @@
   }
 
   // 모드 전환
-  function computeSinglePageMode(){
-    return window.matchMedia(`(max-width: ${MOBILE_BREAKPOINT}px)`).matches;
-  }
+  function computeSinglePageMode(){ return window.matchMedia(`(max-width: ${MOBILE_BREAKPOINT}px)`).matches; }
   function applyModeInit(){
     isSinglePageMode = computeSinglePageMode();
     CONTENT_W = isSinglePageMode ? PAGE_W : BOOK_W;
     applyCSSVars();
     initFlip(currentPages, isSinglePageMode);
-    fitToViewportOr100();
+    setupPanzoom(true); // 새 레이아웃 기준으로 Panzoom 재생성
+    setStatus('Ready');
   }
   function applyModeOnResize(){
     const nextSingle = computeSinglePageMode();
+    const idx = pageFlip ? pageFlip.getCurrentPageIndex() : 0;
     if (nextSingle !== isSinglePageMode){
-      const idx = pageFlip ? pageFlip.getCurrentPageIndex() : 0;
       isSinglePageMode = nextSingle;
       CONTENT_W = isSinglePageMode ? PAGE_W : BOOK_W;
       applyCSSVars();
       initFlip(currentPages, isSinglePageMode);
       pageFlip.flip(idx);
-      fitToViewportOr100();
-    }else{
-      CONTENT_W = isSinglePageMode ? PAGE_W : BOOK_W;
-      applyCSSVars();
-      clampPosition(true); applyTransform();
-    }
-  }
-
-  // ====== 클램프/센터 함수 (핵심) ======
-  function clampPosition(centerIfSmaller){
-    const vw = viewer.clientWidth, vh = viewer.clientHeight;
-    const scaledW = CONTENT_W * scale;
-    const scaledH = PAGE_H     * scale;
-
-    // X
-    if (scaledW > vw){
-      const minX = vw - scaledW, maxX = 0;
-      tx = Math.min(maxX, Math.max(minX, tx));
-    } else if (centerIfSmaller){
-      tx = (vw - scaledW) / 2; // 보기보다 작을 땐 센터링(초기/리사이즈)
-    } // else: 작아도 자유 패닝 허용
-
-    // Y
-    if (scaledH > vh){
-      const minY = vh - scaledH, maxY = 0;
-      ty = Math.min(maxY, Math.max(minY, ty));
-    } else if (centerIfSmaller){
-      ty = (vh - scaledH) / 2;
-    }
-  }
-
-  function applyTransform(){
-    zoomLayer.style.transform = `translate3d(${tx}px, ${ty}px, 0) scale(${scale})`;
-    zoomRange.value = Math.round(scale * 100);
-    zoomLbl.textContent = `${Math.round(scale * 100)}%`;
-  }
-
-  // clampMode: 'center' | 'free' | 'none'
-  function setScale(newScale, fx, fy, clampMode='center'){
-    const rect = viewer.getBoundingClientRect();
-    const cx = (fx !== undefined) ? fx : rect.width/2;
-    const cy = (fy !== undefined) ? fy : rect.height/2;
-
-    const prev = scale;
-    const next = Math.max(MIN_SCALE, Math.min(MAX_SCALE, newScale));
-
-    const px = (cx - tx) / prev;
-    const py = (cy - ty) / prev;
-
-    scale = next;
-    tx = cx - px * scale;
-    ty = cy - py * scale;
-
-    if (clampMode === 'center') clampPosition(true);
-    else if (clampMode === 'free') clampPosition(false);
-    // 'none'이면 클램프 생략
-
-    applyTransform();
-  }
-
-  function fitToViewportOr100(){
-    const vw = viewer.clientWidth, vh = viewer.clientHeight;
-    const fit = Math.min(vw / CONTENT_W, vh / PAGE_H);
-    const startScale = Math.max(MIN_SCALE, Math.min(1, fit));
-    setScale(startScale, undefined, undefined, 'center');
-  }
-
-  // 컨트롤 버튼
-  prevBtn.addEventListener('click', ()=>goPrev());
-  nextBtn.addEventListener('click', ()=>goNext());
-  pageInput.addEventListener('change', ()=>{
-    if(!pageFlip) return;
-    const n = Math.max(1, Math.min(parseInt(pageInput.value||'1',10), pageFlip.getPageCount()));
-    pageFlip.flip(n-1); pageInput.value = n;
-  });
-  zoomRange.addEventListener('input', ()=>{
-    setScale(parseInt(zoomRange.value,10)/100, undefined, undefined, 'center');
-  });
-  fsBtn.addEventListener('click', ()=>{
-    const el = viewer;
-    if(!document.fullscreenElement){
-      (el.requestFullscreen || el.webkitRequestFullscreen || document.documentElement.requestFullscreen).call(el);
+      setupPanzoom(true);
     } else {
-      (document.exitFullscreen || document.webkitExitFullscreen || document.cancelFullscreen).call(document);
-    }
-  });
-
-  // 휠 줌 (데스크톱)
-  viewer.addEventListener('wheel', (e)=>{
-    e.preventDefault(); e.stopPropagation();
-    const rect = viewer.getBoundingClientRect();
-    const x = e.clientX - rect.left;
-    const y = e.clientY - rect.top;
-    const factor = (e.deltaY < 0) ? 1.12 : 0.89;
-    setScale(scale * factor, x, y, 'center');
-  }, { passive:false });
-
-  // === Pointer Events (모바일/PC 공통) ===
-  const pointers = new Map();
-  let isDragging = false, dragLast = {x:0,y:0};
-  let pinchStartDist = 0, pinchStartScale = 1, pinchPrevCenter = {x:0,y:0};
-  let tapState = {}; // {id, x0,y0,t0}
-
-  function dist(a,b){ const dx=a.x-b.x, dy=a.y-b.y; return Math.hypot(dx,dy); }
-  function mid(a,b){ return { x:(a.x+b.x)/2, y:(a.y+b.y)/2 }; }
-
-  // 캡처 단계에서 PageFlip로 이벤트 전달 차단
-  viewer.addEventListener('pointerdown', (e)=>{
-    e.preventDefault(); e.stopPropagation();
-    // 마우스: 좌클릭만
-    if (e.pointerType === 'mouse' && e.button !== 0) return;
-
-    viewer.setPointerCapture(e.pointerId);
-    const r = viewer.getBoundingClientRect();
-    const p = { x:e.clientX - r.left, y:e.clientY - r.top };
-    pointers.set(e.pointerId, p);
-    tapState[e.pointerId] = { x0:p.x, y0:p.y, t0:performance.now() };
-
-    if (pointers.size === 1 && scale > 1){
-      isDragging = true; zoomLayer.classList.add('dragging'); dragLast = p;
-    } else if (pointers.size === 2){
-      gestureHadPinch = true;
-      const [p1,p2] = [...pointers.values()];
-      pinchStartDist = dist(p1,p2); pinchStartScale = scale; pinchPrevCenter = mid(p1,p2);
-    }
-  }, { passive:false, capture:true });
-
-  viewer.addEventListener('pointermove', (e)=>{
-    e.preventDefault(); e.stopPropagation();
-    if (!pointers.has(e.pointerId)) return;
-    const r = viewer.getBoundingClientRect();
-    const cur = { x:e.clientX - r.left, y:e.clientY - r.top };
-    pointers.set(e.pointerId, cur);
-
-    if (pointers.size === 2){
-      // === 핀치 줌: 클램프 없음(끊김 방지), 끝나면 정리
-      const [a,b] = [...pointers.values()];
-      const d = Math.max(1, dist(a,b));
-      const c = mid(a,b);
-      const target = Math.max(MIN_SCALE, Math.min(MAX_SCALE, pinchStartScale * (d / pinchStartDist)));
-      setScale(target, c.x, c.y, 'none'); // 클램프 생략
-      // 핀치 중심 이동량만큼 패닝
-      tx += (c.x - pinchPrevCenter.x); ty += (c.y - pinchPrevCenter.y);
-      clampPosition(false); applyTransform();
-      pinchPrevCenter = c;
-    } else if (isDragging && scale > 1){
-      // === 한 손 드래그 패닝: 자유 클램프(보기보다 클 때만)
-      tx += (cur.x - dragLast.x); ty += (cur.y - dragLast.y);
-      dragLast = cur; clampPosition(false); applyTransform();
-    }
-  }, { passive:false, capture:true });
-
-  function onPointerEnd(e){
-    e.preventDefault(); e.stopPropagation();
-    const start = tapState[e.pointerId];
-    if (pointers.has(e.pointerId)) pointers.delete(e.pointerId);
-    if (start){
-      const r = viewer.getBoundingClientRect();
-      const end = { x:e.clientX - r.left, y:e.clientY - r.top, t:performance.now() };
-      const moved = Math.hypot(end.x - start.x0, end.y - start.y0);
-      const dt = end.t - start.t0;
-
-      // 탭 판정(짧고 작은 이동) + 확대 아님 + 핀치 흔적 없음
-      if (moved <= TAP_MAX_DIST && dt <= TAP_MAX_MS && scale <= 1 && !gestureHadPinch){
-        const bookRect = flipRoot.getBoundingClientRect();
-        if (e.clientX >= bookRect.left && e.clientX <= bookRect.right &&
-            e.clientY >= bookRect.top  && e.clientY <= bookRect.bottom){
-          const xRel = (e.clientX - bookRect.left) / bookRect.width;
-          if (xRel <= EDGE_TAP_ZONE)       goPrev();
-          else if (xRel >= 1-EDGE_TAP_ZONE) goNext();
-        }
-      }
-      delete tapState[e.pointerId];
-    }
-
-    // 핀치 → 남은 한 손가락으로 즉시 드래그
-    if (pointers.size === 1 && scale > 1){
-      isDragging = true;
-      zoomLayer.classList.add('dragging');
-      dragLast = [...pointers.values()][0];
-    } else if (pointers.size === 0){
-      isDragging = false;
-      zoomLayer.classList.remove('dragging');
-      gestureHadPinch = false; // 초기화
-      // 제스처가 끝났을 때만 센터링/정리
-      clampPosition(true); applyTransform();
-    }
-
-    if (pointers.size < 2) pinchStartDist = 0;
-  }
-
-  viewer.addEventListener('pointerup', onPointerEnd, { passive:false, capture:true });
-  viewer.addEventListener('pointercancel', onPointerEnd, { passive:false, capture:true });
-  viewer.addEventListener('pointerleave', onPointerEnd, { passive:false, capture:true });
-
-  // 창 크기 변경
-  let _resizeTimer = null;
-  window.addEventListener('resize', ()=>{
-    clearTimeout(_resizeTimer);
-    _resizeTimer = setTimeout(()=>{
-      applyModeOnResize();
-      fitToViewportOr100();
-      fitTitleDebounced();
-    }, 120);
-  });
-
-  // 초기 로드
-  (async ()=>{
-    try{
-      const absManifestUrl = toAbs(manifestArg, location.href);
-      const raw = await fetchManifest(absManifestUrl);
-      const normalized = normalizeManifest(raw, absManifestUrl);
-
-      bookTitleEl.textContent = normalized.title || 'Monthly Art – Flipbook';
-      currentPages = normalized.pages;
-      if (!currentPages.length){ setStatus('manifest에 페이지가 없습니다.'); return; }
-
-      const dim = await getImageSize(currentPages[0]);
-      PAGE_W = dim.w; PAGE_H = dim.h; BOOK_W = PAGE_W * 2; CONTENT_W = BOOK_W;
-      applyCSSVars();
-
-      applyModeInit(); // 단면/스프레드 초기화 & 맞춤
-      setStatus('Ready');
-      requestAnimationFrame(fitTitle);
-    }catch(e){
-      console.error(e);
-      setStatus('로드 오류: ' + (e.message || e));
-    }
-  })();
-
-  // 우클릭 방지
-  document.addEventListener('contextmenu', (e)=>{ e.preventDefault(); }, { capture:true });
-
-  // 제목 자동 맞춤
-  function fitTitle() {
-    const box = document.querySelector('.titleBox');
-    const text = document.getElementById('bookTitle');
-    if (!box || !text) return;
-    text.style.fontSize = '';
-    const style = getComputedStyle(text);
-    let size = parseFloat(style.fontSize);
-    const minSize = 11;
-    const available = box.clientWidth;
-    let guard = 120;
-    while (text.scrollWidth > available && size > minSize && guard-- > 0) {
-      size = Math.max(minSize, size - 0.5);
-      text.style.fontSize = size + 'px';
-    }
-  }
-  let _fitTimer = null;
-  function fitTitleDebounced(){ clearTimeout(_fitTimer); _fitTimer = setTimeout(fitTitle, 120); }
-
-  // ==== 키보드 화살표 내비/패닝 ====
-  const PAN_STEP_PX = 120; // 화면 기준 픽셀
-  window.addEventListener('keydown', (e)=>{
-    if (isTextInputFocused()) return;
-    const k = e.key;
-    if (!['ArrowLeft','ArrowRight','ArrowUp','ArrowDown'].includes(k)) return;
-    e.preventDefault();
-    if (scale > 1) {
-      const step = PAN_STEP_PX / scale;
-      if (k === 'ArrowLeft')  tx += step;
-      if (k === 'ArrowRight') tx -= step;
-      if (k === 'ArrowUp')    ty += step;
-      if (k === 'ArrowDown')  ty -= step;
-      clampPosition(false); applyTransform();
-      return;
-    }
-    if (k === 'ArrowLeft')  goPrev();
-    if (k === 'ArrowRight') goNext();
-  });
-</script>
-</body>
-</html>
+      CONTENT_W = isSinglePageMode ? PAGE_W : BOOK_W;
+      appl
